--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -43,7 +43,21 @@
 
 .card-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
   gap: 16px;
   padding: 16px;
+}
+
+.on-btn, .on-btn:hover{
+  background-color: #87d068 !important;
+  color: white;
+}
+.off-btn, .off-btn:hover{
+  background-color: #f50 !important;
+  color: white;
+}
+
+.offline-btn, .offline-btn:hover{
+  background-color: #9E9E9E !important;
+  color: white;
 }
