--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -53,6 +53,7 @@
   background-color: #87d068 !important;
   color: white;
 }
+
 .off-btn,
 .off-btn:hover {
   background-color: #f50 !important;
@@ -65,11 +66,15 @@
   color: white;
 }
 
+.svg-wrapper {
+  width: 100px;
+  height: 100px;
+}
+
 /* Add this CSS in a relevant CSS or styled-components file */
 /* Existing CSS */
 .fan-blades {
-  width: 100px;
-  height: 100px;
+
   background: url('public/assets/fan-blades.svg') no-repeat center/contain;
 }
 
